--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,3 +1,12 @@
 <div>
   <h1>Dental Practice Data</h1>
 </div>
+<div>
+  <mat-form-field>
+    <mat-select placeholder="Survey Year">
+      <mat-option *ngFor="let year of yearList" [value]="year">
+        {{year}}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
