change year to act as global state for application

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div fxLayout="column" fxLayoutAlign="space-between start">
-  <app-header></app-header>
-  <app-main></app-main>
+  <app-header fxFill></app-header>
+  <app-main fxFill></app-main>
 </div>
