--- a/src/app/dental-practice-list/dental-practice-list.component.html
+++ b/src/app/dental-practice-list/dental-practice-list.component.html
@@ -1,3 +1,1 @@
-<p>
-  dental-practice-list works!
-</p>
+<app-dental-practice-table *ngIf="dataSource" [dataSource]="dataSource" fxFill></app-dental-practice-table>
