--- a/src/app/dental-practice-list/dental-practice-table/dental-practice-table.component.html
+++ b/src/app/dental-practice-list/dental-practice-table/dental-practice-table.component.html
@@ -1,25 +1,25 @@
-<div class="practiceList" fxFlex="100">
-  <table mat-table [dataSource]="practiceList">
+<div fxFlex="50">
+  <table mat-table [dataSource]="practiceList" matSort fxFill>
 
     <ng-container matColumnDef="PracticeName">
-      <th mat-header-cell *matHeaderCellDef> Practice Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Practice Name </th>
       <td mat-cell *matCellDef="let element"> {{element.PracticeName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="CodeDifference">
-      <th mat-header-cell *matHeaderCellDef> Code Different </th>
-      <td mat-cell *matCellDef="let element"> {{element.CodeDifference}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Different </th>
+      <td mat-cell *matCellDef="let element"> {{element.CodeDifference}}% </td>
     </ng-container>
 
     <ng-container matColumnDef="IsSchenckClient">
-        <th mat-header-cell *matHeaderCellDef> Is a Client </th>
-        <td mat-cell *matCellDef="let element"> {{element.IsSchenckClient}} </td>
-      </ng-container>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is a Client </th>
+      <td mat-cell *matCellDef="let element"> {{element.IsSchenckClient}} </td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator [length]="practiceList?.data.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]"
+  <mat-paginator [length]="practiceList?.data.length" [pageSize]="15" [pageSizeOptions]="[5, 10, 20]"
     showFirstLastButtons></mat-paginator>
 </div>
