--- a/src/app/practice-codes-table/practice-codes-table.component.html
+++ b/src/app/practice-codes-table/practice-codes-table.component.html
@@ -1,3 +1,43 @@
-<p>
-  practice-codes-table works!
-</p>
+<div fxFlex="100">
+  <table mat-table [dataSource]="practiceRegionData" matSort fxFill>
+
+    <ng-container matColumnDef="DentalCode">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Dental Code </th>
+      <td mat-cell *matCellDef="let element">{{element.DentalCode}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="FirstYearEnteredValue">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Value {{dataSource[0]?.FirstSurveyYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.FirstYearEnteredValue}}% </td>
+    </ng-container>
+
+    <ng-container matColumnDef="FirstYearRegionAverage">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is a Client </th>
+      <td mat-cell *matCellDef="let element"> {{element.IsSchenckClient}} </td>
+    </ng-container>
+    <ng-container matColumnDef="SecondYearEnteredValue">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Different </th>
+      <td mat-cell *matCellDef="let element"> {{element.CodeDifference}}% </td>
+    </ng-container>
+
+    <ng-container matColumnDef="SecondYearRegionAverage">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is a Client </th>
+      <td mat-cell *matCellDef="let element"> {{element.IsSchenckClient}} </td>
+    </ng-container>
+    <ng-container matColumnDef="ThirdYearEnteredValue">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Different </th>
+      <td mat-cell *matCellDef="let element"> {{element.CodeDifference}}% </td>
+    </ng-container>
+
+    <ng-container matColumnDef="ThirdYearRegionAverage">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is a Client </th>
+      <td mat-cell *matCellDef="let element"> {{element.IsSchenckClient}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [length]="practiceRegionData?.data.length" [pageSize]="15" [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons></mat-paginator>
+</div>
