--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -11,7 +11,7 @@
   </mat-form-field>
 </div>
 <div *ngIf="isYearSelected">
-  <app-dental-practice-list [dataSource]="practiceAveragesList" *ngIf="practiceAveragesList; else loading"></app-dental-practice-list>
+  <app-dental-practice-list [practiceList]="practiceAveragesList" *ngIf="practiceAveragesList; else loading"></app-dental-practice-list>
 </div>
 <ng-template #loading>
   <div fxLayout="column" fxLayoutAlign="center center">
