--- a/src/app/practice-codes-table/practice-codes-table.component.html
+++ b/src/app/practice-codes-table/practice-codes-table.component.html
@@ -7,31 +7,36 @@
     </ng-container>
 
     <ng-container matColumnDef="FirstYearEnteredValue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Value {{dataSource[0]?.FirstSurveyYear}} </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Value {{practiceRegionData[0]?.FirstSurveyYear}} </th>
       <td mat-cell *matCellDef="let element"> {{element.FirstYearEnteredValue}}% </td>
     </ng-container>
 
     <ng-container matColumnDef="FirstYearRegionAverage">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is a Client </th>
-      <td mat-cell *matCellDef="let element"> {{element.IsSchenckClient}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{practiceRegionData[0]?.FirstSurveyYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.FirstYearRegionAverage}} </td>
     </ng-container>
     <ng-container matColumnDef="SecondYearEnteredValue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Different </th>
-      <td mat-cell *matCellDef="let element"> {{element.CodeDifference}}% </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Value {{practiceRegionData[0]?.SecondSurveyYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.SecondSurveyYear}}% </td>
     </ng-container>
 
     <ng-container matColumnDef="SecondYearRegionAverage">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is a Client </th>
-      <td mat-cell *matCellDef="let element"> {{element.IsSchenckClient}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{practiceRegionData[0]?.SecondSurveyYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.SecondYearRegionAverage}} </td>
     </ng-container>
     <ng-container matColumnDef="ThirdYearEnteredValue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code Different </th>
-      <td mat-cell *matCellDef="let element"> {{element.CodeDifference}}% </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Value {{practiceRegionData[0]?.ThirdSurveyYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.ThirdSurveyYear}}% </td>
     </ng-container>
 
     <ng-container matColumnDef="ThirdYearRegionAverage">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is a Client </th>
-      <td mat-cell *matCellDef="let element"> {{element.IsSchenckClient}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{practiceRegionData[0]?.ThirdSurveyYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.ThirdYearRegionAverage}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="EnteredValueDifference">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Difference </th>
+      <td mat-cell *matCellDef="let element"> {{element.EnteredValueDifference}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -40,4 +45,5 @@
 
   <mat-paginator [length]="practiceRegionData?.data.length" [pageSize]="15" [pageSizeOptions]="[5, 10, 20]"
     showFirstLastButtons></mat-paginator>
+
 </div>
