--- a/src/app/practice-codes-table/practice-codes-table.component.html
+++ b/src/app/practice-codes-table/practice-codes-table.component.html
@@ -1,4 +1,5 @@
 <div fxFlex="100">
+  <h2>{{title}}</h2>
   <table mat-table [dataSource]="practiceRegionData" matSort fxFill>
 
     <ng-container matColumnDef="DentalCode">
@@ -7,37 +8,38 @@
     </ng-container>
 
     <ng-container matColumnDef="FirstYearEnteredValue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Value {{practiceRegionData[0]?.FirstSurveyYear}} </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Value {{firstYear}} </th>
       <td mat-cell *matCellDef="let element"> {{element.FirstYearEnteredValue}}% </td>
     </ng-container>
 
     <ng-container matColumnDef="FirstYearRegionAverage">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{practiceRegionData[0]?.FirstSurveyYear}} </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{firstYear}} </th>
       <td mat-cell *matCellDef="let element"> {{element.FirstYearRegionAverage}} </td>
     </ng-container>
     <ng-container matColumnDef="SecondYearEnteredValue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Value {{practiceRegionData[0]?.SecondSurveyYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.SecondSurveyYear}}% </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Value {{secondYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.SecondYearEnteredValue}}% </td>
     </ng-container>
 
     <ng-container matColumnDef="SecondYearRegionAverage">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{practiceRegionData[0]?.SecondSurveyYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.SecondYearRegionAverage}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{secondYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.SecondYearRegionAverage}}% </td>
     </ng-container>
     <ng-container matColumnDef="ThirdYearEnteredValue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Value {{practiceRegionData[0]?.ThirdSurveyYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.ThirdSurveyYear}}% </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Value {{thirdYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.ThirdYearEnteredValue}}% </td>
     </ng-container>
 
     <ng-container matColumnDef="ThirdYearRegionAverage">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{practiceRegionData[0]?.ThirdSurveyYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.ThirdYearRegionAverage}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{thirdYear}} </th>
+      <td mat-cell *matCellDef="let element"> {{element.ThirdYearRegionAverage}}% </td>
     </ng-container>
 
     <ng-container matColumnDef="EnteredValueDifference">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Difference </th>
       <td mat-cell *matCellDef="let element"> {{element.EnteredValueDifference}} </td>
     </ng-container>
+
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
