--- a/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
+++ b/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
@@ -1,4 +1,4 @@
-<div fxFlex="100">
+<!-- <div fxFlex="100">
   <h2>{{title}}</h2>
   <table mat-table [dataSource]="practiceRegionData" matSort fxFill>
 
@@ -48,4 +48,5 @@
   <mat-paginator [length]="practiceRegionData?.data.length" [pageSize]="15" [pageSizeOptions]="[5, 10, 20]"
     showFirstLastButtons></mat-paginator>
 
-</div>
+</div> -->
+table loaded
