--- a/src/app/dental-practice-list/dental-practice-table/dental-practice-table.component.html
+++ b/src/app/dental-practice-list/dental-practice-table/dental-practice-table.component.html
@@ -12,8 +12,8 @@
     </ng-container>
 
     <ng-container matColumnDef="IsSchenckClient">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Is a Client </th>
-      <td mat-cell *matCellDef="let element"> {{element.IsSchenckClient}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Practice Id </th>
+      <td mat-cell *matCellDef="let element"> {{element.PracticeId}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
