--- a/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
+++ b/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
@@ -10,43 +10,43 @@
   <table mat-table [dataSource]="practiceRegionData" matSort fxFill>
 
     <ng-container matColumnDef="DentalCode">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Dental Code </th>
+      <th mat-header-cell *matHeaderCellDef> Dental Code </th>
       <td mat-cell *matCellDef="let element">{{element.DentalCode}}</td>
     </ng-container>
 
     <ng-container matColumnDef="FirstYearEnteredValue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Value {{firstYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.FirstYearEnteredValue}}% </td>
+      <th mat-header-cell *matHeaderCellDef>Value {{firstYear}} </th>
+      <td mat-cell *matCellDef="let element"> ${{element.FirstYearEnteredValue}}</td>
     </ng-container>
 
     <ng-container matColumnDef="FirstYearRegionAverage">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{firstYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.FirstYearRegionAverage}} </td>
-    </ng-container>
-    <ng-container matColumnDef="SecondYearEnteredValue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Value {{secondYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.SecondYearEnteredValue}}% </td>
-    </ng-container>
-
-    <ng-container matColumnDef="SecondYearRegionAverage">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{secondYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.SecondYearRegionAverage}}% </td>
-    </ng-container>
-    <ng-container matColumnDef="ThirdYearEnteredValue">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Value {{thirdYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.ThirdYearEnteredValue}}% </td>
-    </ng-container>
-
-    <ng-container matColumnDef="ThirdYearRegionAverage">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Region Average {{thirdYear}} </th>
-      <td mat-cell *matCellDef="let element"> {{element.ThirdYearRegionAverage}}% </td>
+      <th mat-header-cell *matHeaderCellDef> Region Average {{firstYear}} </th>
+      <td mat-cell *matCellDef="let element"> ${{element.FirstYearRegionAverage}} </td>
     </ng-container>
 
     <ng-container matColumnDef="EnteredValueDifference">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Difference </th>
-      <td mat-cell *matCellDef="let element"> {{element.EnteredValueDifference}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Change Differential </th>
+      <td mat-cell *matCellDef="let element"> {{element.EnteredValueDifference | number:'1.2-2'}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="SecondYearEnteredValue">
+      <th mat-header-cell *matHeaderCellDef> Value {{secondYear}} </th>
+      <td mat-cell *matCellDef="let element"> ${{element.SecondYearEnteredValue}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="SecondYearRegionAverage">
+      <th mat-header-cell *matHeaderCellDef> Region Average {{secondYear}} </th>
+      <td mat-cell *matCellDef="let element"> ${{element.SecondYearRegionAverage}} </td>
+    </ng-container>
+    <ng-container matColumnDef="ThirdYearEnteredValue">
+      <th mat-header-cell *matHeaderCellDef> Value {{thirdYear}} </th>
+      <td mat-cell *matCellDef="let element"> ${{element.ThirdYearEnteredValue}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="ThirdYearRegionAverage">
+      <th mat-header-cell *matHeaderCellDef> Region Average {{thirdYear}} </th>
+      <td mat-cell *matCellDef="let element"> ${{element.ThirdYearRegionAverage}} </td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
