add color difference for positive and negative difference

--- a/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
+++ b/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
@@ -26,7 +26,7 @@
 
     <ng-container matColumnDef="EnteredValueDifference">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Change Differential </th>
-      <td mat-cell *matCellDef="let element"> {{element.EnteredValueDifference | number:'1.2-2'}} </td>
+      <td mat-cell *matCellDef="let element"> <span [ngStyle]="{'color':element.EnteredValueDifference > 0 ? 'green' : 'red'}">{{element.EnteredValueDifference | number:'1.2-2'}}</span> </td>
     </ng-container>
 
     <ng-container matColumnDef="SecondYearEnteredValue">
