change button text from CSV to Excel

--- a/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
+++ b/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
@@ -4,7 +4,7 @@
       <h2>{{title}}</h2>
     </div>
     <div>
-      <button mat-flat-button color="primary" (click)="exportToCSV()">Export to CSV</button>
+      <button mat-flat-button color="primary" (click)="exportToCSV()">Export to Excel</button>
     </div>
   </div>
   <table mat-table [dataSource]="practiceRegionData" matSort fxFill>
