--- a/src/app/dental-practice-list/dental-practice-table/dental-practice-table.component.html
+++ b/src/app/dental-practice-list/dental-practice-table/dental-practice-table.component.html
@@ -1,6 +1,6 @@
 <div fxFlex="50">
   <div>
-    <button mat-flat-button color="primary" (click)="exportToCSV()">Export to CSV</button>
+    <button mat-flat-button color="primary" (click)="exportToCSV()">Export to Excel</button>
   </div>
   <table mat-table [dataSource]="practiceList" matSort fxFill>
 
