--- a/src/app/dental-practice-list/dental-practice-table/dental-practice-table.component.html
+++ b/src/app/dental-practice-list/dental-practice-table/dental-practice-table.component.html
@@ -1,12 +1,12 @@
 <div fxFlex="50">
-  <p>
-    <button mat-flat-button color="primary" (click)="exportToCSV()">Export to Excel</button>
-  </p>
-  <p>
+  <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="10px">
     <mat-form-field>
       <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search Practice Name">
     </mat-form-field>
-  </p>
+    <div>
+      <button mat-flat-button color="primary" (click)="exportToCSV()">Export to Excel</button>
+    </div>
+  </div>
   <table mat-table [dataSource]="practiceList" matSort fxFill>
 
     <ng-container matColumnDef="PracticeName">
