--- a/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
+++ b/src/app/practice-codes/practice-codes-table/practice-codes-table.component.html
@@ -1,10 +1,19 @@
 <div fxFlex="100">
-  <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="10px">
-    <div>
-      <h2>{{title}}</h2>
+  <div fxLayout="column" fxLayoutAlign="space-between start">
+    <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="10px">
+      <div>
+        <h2>{{practiceInformation.Name}}</h2>
+      </div>
+      <div>
+        <button mat-flat-button color="primary" (click)="exportToCSV()">Export to Excel</button>
+      </div>
     </div>
     <div>
-      <button mat-flat-button color="primary" (click)="exportToCSV()">Export to Excel</button>
+      <h3>{{practiceInformation.RegionName}}</h3>
+    </div>
+    <div>
+      <p>{{practiceInformation.Address}}</p>
+      <p>{{practiceInformation.City}}, {{practiceInformation.State}} {{practiceInformation.ZipCode}}</p>
     </div>
   </div>
   <table mat-table [dataSource]="practiceRegionData" matSort fxFill>
@@ -26,7 +35,8 @@
 
     <ng-container matColumnDef="EnteredValueDifference">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Change Differential </th>
-      <td mat-cell *matCellDef="let element"> <span [ngStyle]="{'color':element.EnteredValueDifference > 0 ? 'green' : 'red'}">{{element.EnteredValueDifference | number:'1.2-2'}}</span> </td>
+      <td mat-cell *matCellDef="let element"> <span [ngStyle]="{'color':element.EnteredValueDifference > 0 ? 'green' : 'red'}">{{element.EnteredValueDifference
+          | number:'1.2-2'}}</span> </td>
     </ng-container>
 
     <ng-container matColumnDef="SecondYearEnteredValue">
