--- a/src/app/practice-codes/practice-codes.component.html
+++ b/src/app/practice-codes/practice-codes.component.html
@@ -1,1 +1,1 @@
-<app-practice-codes-table [title]="title" [dataSource]="practiceRegionTableDTO" *ngIf="practiceRegionTableDTO"></app-practice-codes-table>
+<app-practice-codes-table [practiceInformation]="practiceInformation" [dataSource]="practiceRegionTableDTO" *ngIf="practiceRegionTableDTO"></app-practice-codes-table>
